variables.Variables.scala.error
Erreur de compilation :
Variables:9: error: not found: type int
var dejafait:int =0
             ^